# codefixer-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  config_manager.py  git_utils.py  issue_deduplicator.py  languages.py  llm.py  logger.py  parallel_linter.py  pyproject.toml  setup.py  test_file.py  web_interface.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: integration.yml  release.yml  test.yml
linters/: __init__.py  configs.py  css_linter.py  env_manager.py  go_linter.py  html_linter.py  incremental_linter.py  java_linter.py  js_linter.py  python_linter.py  rust_linter.py  yaml_linter.py
templates/: fix_prompt.txt  index.html
tests/: __init__.py  conftest.py  test_issue_deduplicator.py  test_languages.py  test_llm.py
utils/: json_parser.py  memory_monitor.py  subprocess_pool.py
